# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "final_project"
description = "Final project as a package"
version = "0.0.1"
authors = [
    { name = "Henrik J.", email = "s240385@dtu.dk" },
    { name = "Ida J. M.", email = "s240387@dtu.dk" }
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/final-project-windcoderss.git"
